@@ -78,8 +78,8 @@ function create ()
    end
 
    mem.credits = mem.ships * 30e3 - mem.flfships * 1e3
-   mem.credits = mem.credits * system.cur():jumpDist( mem.missys, true ) / 3
-   mem.credits = mem.credits + rnd.sigma() * 8e3
+   mem.credits = mem.credits * (system.cur():jumpDist( mem.missys, true )+1) / 3
+   mem.credits = mem.credits * (1 + 0.2*rnd.sigma())
 
    local desc = setDescription()
 
