@@ -9,6 +9,7 @@
    * Gave unicorp storm launchers a rarity of 2 and made it more available
    * `test_of_renewal`: fixed weapon set defaults being incorrect and increased enemy damage
    * Fixed many typos
+   * flf_diversion, flf_rogue: Missions should no longer be able to have ridiculously low credit rewards
 
 * 0.11.0-beta.2
    * Slim GUI now shows activated outfits and all weapons all the time
